fix(roll-curtains): show on mobile 2 cards

--- a/src/assets/styles/main-page/_roll-curtains.scss
+++ b/src/assets/styles/main-page/_roll-curtains.scss
@@ -91,3 +91,37 @@
     margin: 30px 0 61px;
   }
 }
+
+@media (max-width: 880px) {
+  .roll-curtains {
+    &__content{
+      gap: 10px;
+    }
+    &__card{
+      max-width: 160px;
+    }
+    &__sep{
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    &__discount-abs{
+      max-width: 70px;
+      padding: 5px;
+      font-size: 9px;
+    }
+    &__discount{
+      font-size: 13px;
+      margin-bottom: 5px;
+    }
+    &__name{
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    &__price{
+      font-size: 12px;
+    }
+    &__text{
+      padding: 10px 13px;
+    }
+  }
+}
